[package]
name = "humphrey_auth"
version = "0.1.4"
edition = "2021"
license = "MIT"
homepage = "https://github.com/w-henderson/Humphrey"
repository = "https://github.com/w-henderson/Humphrey"
readme = "README.md"
description = "User authentication for the Humphrey web server."
keywords = ["authentication"]
categories = ["authentication"]

[dependencies]
humphrey = { version = "^0.7.0", path = "../humphrey", optional = true }
humphrey_json = { version = ">=0.1.1", path = "../humphrey-json", optional = true }
argon2 = "0.3"
uuid = { version = "0.8", features = ["v4"] }
rand_core = { version = "0.6", features = ["std"] }

[features]
humphrey = ["dep:humphrey"]
json = ["humphrey_json"]
default = ["humphrey"]

[lib]
doctest = false
