[package]
name = "humphrey_server"
version = "0.2.6"
edition = "2018"
license = "MIT"
homepage = "https://github.com/w-henderson/Humphrey"
repository = "https://github.com/w-henderson/Humphrey"
readme = "README.md"
description = "A Performance-Focused, Dependency-Free Web Server."
keywords = ["http", "server", "http-server"]
categories = ["web-programming::http-server", "network-programming", "command-line-utilities"]

[dependencies]
humphrey = { version = "^0.3", path = "../humphrey" }
libloading = { version = "0.7", optional = true }

[features]
plugins = ["libloading"]

[lib]
test = false
doctest = false

[[bin]]
name = "humphrey"
path = "src/main.rs"