[package]
name = "plugin"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
humphrey = { path = "../../humphrey" }
humphrey_server = { path = "../../humphrey-server", features = ["plugins"] }
humphrey_ws = { path = "../../humphrey-ws" }

[lib]
crate-type = ["cdylib", "rlib"]

[workspace]