[package]
name = "stateful"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
humphrey = { path = "../../humphrey", features = ["tokio"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"

[workspace]
